[package]
name = "egui_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
rfd = "0.14.1"
eframe = "0.28.1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
reqwest = "0.12.5"

[target.'cfg(macos)'.dependencies]
reqwest = "0.12.5"

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.12.5", features = ["native-tls-vendored"], optional = true }
